--- a/index.html
+++ b/index.html
@@ -107,24 +107,26 @@
     </section>
 
     <!-- CONTACTO -->
-    <section class="py-16 bg-white" id="contacto">
-        <div class="max-w-3xl mx-auto text-center">
-            <h2 class="text-3xl font-bold text-[#627eff] mb-6">Contáctanos</h2>
-            <p class="text-gray-700 mb-8">¿Tienes dudas o deseas agendar una sesión? Completa el formulario y te
-                responderemos pronto.</p>
-            <form action="https://formspree.io/f/tu-form-id" method="POST" class="space-y-4 text-left">
-                <input type="text" name="nombre" placeholder="Tu nombre" required
-                    class="w-full px-4 py-2 border rounded">
-                <input type="email" name="email" placeholder="Tu correo" required
-                    class="w-full px-4 py-2 border rounded">
-                <textarea name="mensaje" rows="4" placeholder="Tu mensaje" required
-                    class="w-full px-4 py-2 border rounded"></textarea>
-                <button type="submit" class="bg-[#53c6e4] text-white px-6 py-2 rounded hover:bg-[#44b5d3]">
+    <section id="contacto" class="relative bg-cover bg-center bg-no-repeat text-white"
+        style="background-image: url('assets/img/contacto-bg.png');">
+        <div class="absolute inset-0 bg-black bg-opacity-50"></div> <!-- Capa oscura -->
+
+        <div class="relative z-10 max-w-4xl mx-auto px-6 py-20">
+            <h2 class="text-3xl md:text-4xl font-bold mb-6 text-center">Contáctanos</h2>
+
+            <form class="grid grid-cols-1 md:grid-cols-2 gap-6 bg-white bg-opacity-90 p-8 rounded-xl text-gray-800">
+                <input type="text" placeholder="Nombre" class="p-3 rounded border border-gray-300" />
+                <input type="email" placeholder="Correo electrónico" class="p-3 rounded border border-gray-300" />
+                <textarea placeholder="Mensaje" class="md:col-span-2 p-3 rounded border border-gray-300"
+                    rows="5"></textarea>
+                <button type="submit"
+                    class="md:col-span-2 bg-[#627eff] hover:bg-[#53c6e4] text-white font-semibold py-3 rounded">
                     Enviar mensaje
                 </button>
             </form>
         </div>
     </section>
+
 
     <!-- FOOTER -->
     <footer class="bg-[#66a6da] text-white text-center py-6 mt-12">
