--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Psicología y Bienestar</title>
+    <!-- ICON -->
+    <link rel="icon" type="image/png" href="logo-ico.png">
+
     <link rel="icon" href="assets/logo.png" />
     <!-- Tailwind CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
