--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Psicología y Bienestar</title>
     <!-- ICON -->
-    <link rel="icon" type="image/png" href="logo-ico.png">
+    <link rel="icon" type="image/png" href="assets/logo-ico.png">
 
     <link rel="icon" href="assets/logo.png" />
     <!-- Tailwind CDN -->
