--- a/index.html
+++ b/index.html
@@ -216,22 +216,15 @@
             <h2 class="text-3xl font-bold text-[#627eff] text-center mb-10">Nuestro Equipo</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
                 <div>
-                    <img src="assets/profesional1.jpg" alt="Psicóloga 1"
-                        class="rounded-full w-32 h-32 mx-auto mb-4 object-cover">
-                    <h3 class="text-lg font-semibold">Ej</h3>
-                    <p class="text-sm text-gray-600">Especialista en Terapia Cognitivo-Conductual</p>
+                    <img src="assets/sindy_team.png" alt="Psicóloga 1" class=" w-32 h-32 mx-auto mb-4 object-cover">
+
                 </div>
                 <div>
-                    <img src="assets/profesional2.jpg" alt="Psicólogo 2"
-                        class="rounded-full w-32 h-32 mx-auto mb-4 object-cover">
-                    <h3 class="text-lg font-semibold">Ej</h3>
-                    <p class="text-sm text-gray-600">Experto en Relaciones y Pareja</p>
+                    <img src="assets/felipe_team.png" alt="Psicólogo 2" class=" w-32 h-32 mx-auto mb-4 object-cover">
+
                 </div>
                 <div>
-                    <img src="assets/profesional3.jpg" alt="Psicóloga 3"
-                        class="rounded-full w-32 h-32 mx-auto mb-4 object-cover">
-                    <h3 class="text-lg font-semibold">Ej</h3>
-                    <p class="text-sm text-gray-600">Psicoterapia Humanista y Mindfulness</p>
+                    <img src="assets/viviana_team.png" alt="Psicóloga 3" class=" w-32 h-32 mx-auto mb-4 object-cover">
                 </div>
             </div>
         </div>
