--- a/index.html
+++ b/index.html
@@ -216,15 +216,15 @@
             <h2 class="text-3xl font-bold text-[#627eff] text-center mb-10">Nuestro Equipo</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
                 <div>
-                    <img src="assets/sindy_team.png" alt="Psicóloga 1" class=" w-32 h-32 mx-auto mb-4 object-cover">
+                    <img src="assets/sindy_team.png" alt="Psicóloga 1" class=" w-32 h-32 mx-auto mb-4">
 
                 </div>
                 <div>
-                    <img src="assets/felipe_team.png" alt="Psicólogo 2" class=" w-32 h-32 mx-auto mb-4 object-cover">
+                    <img src="assets/felipe_team.png" alt="Psicólogo 2" class=" w-32 h-32 mx-auto mb-4">
 
                 </div>
                 <div>
-                    <img src="assets/viviana_team.png" alt="Psicóloga 3" class=" w-32 h-32 mx-auto mb-4 object-cover">
+                    <img src="assets/viviana_team.png" alt="Psicóloga 3" class=" w-32 h-32 mx-auto mb-4">
                 </div>
             </div>
         </div>
