--- a/index.html
+++ b/index.html
@@ -228,6 +228,12 @@
                 </div>
             </div>
         </div>
+        <div class="mt-10 text-center">
+            <a href="servicios-empresariales.html"
+                class="inline-block bg-[#627eff] hover:bg-[#53c6e4] text-white font-semibold py-3 px-8 rounded-full shadow-md transition duration-300 ease-in-out">
+                Conoce nuestros Servicios Empresariales
+            </a>
+        </div>
     </section>
 
     <!-- CONTACTO -->
