--- a/servicios-empresariales.html
+++ b/servicios-empresariales.html
@@ -83,6 +83,30 @@
     </div>
   </section>
 
+  <!-- Contactanos -->
+   <!-- FORMULARIO DE CONTACTO -->
+<div class="mt-20 max-w-2xl mx-auto bg-white shadow-lg rounded-xl p-6">
+    <h2 class="text-2xl font-semibold text-[#627eff] mb-4 text-center">Contáctanos</h2>
+    <form action="https://formspree.io/f/xyzebrqk" method="POST" class="space-y-4">
+      <div>
+        <label class="block text-sm font-medium">Nombre</label>
+        <input type="text" name="nombre" required class="w-full mt-1 px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-[#66a6da]" />
+      </div>
+      <div>
+        <label class="block text-sm font-medium">Correo electrónico</label>
+        <input type="email" name="email" required class="w-full mt-1 px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-[#66a6da]" />
+      </div>
+      <div>
+        <label class="block text-sm font-medium">Mensaje</label>
+        <textarea name="mensaje" rows="4" required class="w-full mt-1 px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-[#66a6da]"></textarea>
+      </div>
+      <button type="submit" class="bg-[#627eff] hover:bg-[#53c6e4] text-white px-6 py-2 rounded-lg transition">
+        Enviar mensaje
+      </button>
+    </form>
+  </div>
+  
+
   <!-- FOOTER -->
   <footer class="bg-[#66a6da] text-white text-center py-4 mt-10">
     <p class="text-sm">© 2025 Psicología y Bienestar. Todos los derechos reservados.</p>
