--- a/servicios-empresariales.html
+++ b/servicios-empresariales.html
@@ -83,11 +83,16 @@
     </div>
   </section>
 
-  <!-- Contactanos -->
-   <!-- FORMULARIO DE CONTACTO -->
+<!-- FORMULARIO DE CONTACTO -->
 <div class="mt-20 max-w-2xl mx-auto bg-white shadow-lg rounded-xl p-6">
     <h2 class="text-2xl font-semibold text-[#627eff] mb-4 text-center">Contáctanos</h2>
-    <form action="https://formspree.io/f/xyzebrqk" method="POST" class="space-y-4">
+  
+    <!-- Mensaje de éxito -->
+    <div id="successMessage" class="hidden text-green-700 bg-green-100 border border-green-300 rounded-lg px-4 py-3 mb-4 text-center">
+      ¡Gracias por contactarnos! Tu mensaje fue enviado exitosamente.
+    </div>
+  
+    <form id="contactForm" action="https://formspree.io/f/abcdwxyz" method="POST" class="space-y-4">
       <div>
         <label class="block text-sm font-medium">Nombre</label>
         <input type="text" name="nombre" required class="w-full mt-1 px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-[#66a6da]" />
@@ -97,14 +102,46 @@
         <input type="email" name="email" required class="w-full mt-1 px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-[#66a6da]" />
       </div>
       <div>
+        <label class="block text-sm font-medium">Teléfono</label>
+        <input type="tel" name="telefono" pattern="[0-9+ ]+" placeholder="+57 300 123 4567" required class="w-full mt-1 px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-[#66a6da]" />
+      </div>
+      <div>
         <label class="block text-sm font-medium">Mensaje</label>
         <textarea name="mensaje" rows="4" required class="w-full mt-1 px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-[#66a6da]"></textarea>
       </div>
-      <button type="submit" class="bg-[#627eff] hover:bg-[#53c6e4] text-white px-6 py-2 rounded-lg transition">
+      <button type="submit" class="bg-[#627eff] hover:bg-[#53c6e4] text-white px-6 py-2 rounded-lg transition w-full">
         Enviar mensaje
       </button>
     </form>
   </div>
+  
+  <!-- Script para manejar el envío sin recargar -->
+  <script>
+    const form = document.getElementById("contactForm");
+    const successMessage = document.getElementById("successMessage");
+  
+    form.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const data = new FormData(form);
+      const action = form.getAttribute("action");
+  
+      const response = await fetch(action, {
+        method: "POST",
+        body: data,
+        headers: {
+          Accept: "application/json",
+        },
+      });
+  
+      if (response.ok) {
+        form.reset();
+        successMessage.classList.remove("hidden");
+        setTimeout(() => {
+          successMessage.classList.add("hidden");
+        }, 5000);
+      }
+    });
+  </script>
   
 
   <!-- FOOTER -->
