--- a/servicios-empresariales.html
+++ b/servicios-empresariales.html
@@ -92,7 +92,7 @@
       ¡Gracias por contactarnos! Tu mensaje fue enviado exitosamente.
     </div>
   
-    <form id="contactForm" action="https://formspree.io/f/abcdwxyz" method="POST" class="space-y-4">
+    <form id="contactForm" action="https://formspree.io/f/mblgpnvb" method="POST" class="space-y-4">
       <div>
         <label class="block text-sm font-medium">Nombre</label>
         <input type="text" name="nombre" required class="w-full mt-1 px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-[#66a6da]" />
