--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <!-- Contenido centrado -->
         <div class="relative z-10 flex items-center justify-center h-full px-6 text-center">
             <div>
-                <h1 class="text-4xl md:text-6xl font-bold mb-6">Bienestar y Psicología</h1>
+                <h1 class="text-4xl md:text-6xl font-bold mb-6">Psicología & Bienestar</h1>
                 <p class="text-lg md:text-xl mb-8 max-w-2xl mx-auto">
                     Un espacio para el equilibrio emocional, el crecimiento personal y el cuidado de tu salud mental.
                 </p>
@@ -206,6 +206,14 @@
 
             </div>
         </div>
+
+        <div class="mt-10 text-center">
+            <a href="servicios-empresariales.html"
+                class="inline-block bg-[#627eff] hover:bg-[#53c6e4] text-white font-semibold py-3 px-8 rounded-full shadow-md transition duration-300 ease-in-out">
+                Conoce nuestros Servicios Empresariales
+            </a>
+        </div>
+        
     </section>
 
 
@@ -227,12 +235,6 @@
                     <img src="assets/viviana_team.png" alt="Psicóloga 3" class=" w-100 h-500 mx-auto mb-4">
                 </div>
             </div>
-        </div>
-        <div class="mt-10 text-center">
-            <a href="servicios-empresariales.html"
-                class="inline-block bg-[#627eff] hover:bg-[#53c6e4] text-white font-semibold py-3 px-8 rounded-full shadow-md transition duration-300 ease-in-out">
-                Conoce nuestros Servicios Empresariales
-            </a>
         </div>
     </section>
 
