--- a/servicios-empresariales.html
+++ b/servicios-empresariales.html
@@ -14,7 +14,7 @@
     <div class="container mx-auto flex justify-between items-center py-4 px-6">
       <div class="flex items-center space-x-2">
         <img src="assets/logo.png" alt="Logo" class="h-10 w-auto" />
-        <h1 class="text-xl font-bold text-white">Psicología y Bienestar</h1>
+        <h1 class="text-xl font-bold text-white">Psicología & Bienestar</h1>
       </div>
       <nav>
         <a href="index.html" class="text-white hover:text-gray-200 font-medium">Inicio</a>
