--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 Conoce nuestros Servicios Empresariales
             </a>
         </div>
-        
+
     </section>
 
 
@@ -238,25 +238,65 @@
         </div>
     </section>
 
-    <!-- CONTACTO -->
-    <section class="py-16 bg-white" id="contacto">
-        <div class="max-w-3xl mx-auto text-center">
-            <h2 class="text-3xl font-bold text-[#627eff] mb-6">Contáctanos</h2>
-            <p class="text-gray-700 mb-8">¿Tienes dudas o deseas agendar una sesión? Completa el formulario y te
-                responderemos pronto.</p>
-            <form action="https://formspree.io/f/tu-form-id" method="POST" class="space-y-4 text-left">
-                <input type="text" name="nombre" placeholder="Tu nombre" required
-                    class="w-full px-4 py-2 border rounded">
-                <input type="email" name="email" placeholder="Tu correo" required
-                    class="w-full px-4 py-2 border rounded">
-                <textarea name="mensaje" rows="4" placeholder="Tu mensaje" required
-                    class="w-full px-4 py-2 border rounded"></textarea>
-                <button type="submit" class="bg-[#53c6e4] text-white px-6 py-2 rounded hover:bg-[#44b5d3]">
-                    Enviar mensaje
-                </button>
-            </form>
-        </div>
-    </section>
+ <!-- FORMULARIO DE CONTACTO -->
+<div class="mt-20 max-w-2xl mx-auto bg-white shadow-lg rounded-xl p-6">
+    <h2 class="text-2xl font-semibold text-[#627eff] mb-4 text-center">Contáctanos</h2>
+  
+    <!-- Mensaje de éxito -->
+    <div id="successMessage" class="hidden text-green-700 bg-green-100 border border-green-300 rounded-lg px-4 py-3 mb-4 text-center">
+      ¡Gracias por contactarnos! Tu mensaje fue enviado exitosamente.
+    </div>
+  
+    <form id="contactForm" action="https://formspree.io/f/mblgpnvb" method="POST" class="space-y-4">
+      <div>
+        <label class="block text-sm font-medium">Nombre</label>
+        <input type="text" name="nombre" required class="w-full mt-1 px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-[#66a6da]" />
+      </div>
+      <div>
+        <label class="block text-sm font-medium">Correo electrónico</label>
+        <input type="email" name="email" required class="w-full mt-1 px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-[#66a6da]" />
+      </div>
+      <div>
+        <label class="block text-sm font-medium">Teléfono</label>
+        <input type="tel" name="telefono" pattern="[0-9+ ]+" placeholder="+57 300 123 4567" required class="w-full mt-1 px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-[#66a6da]" />
+      </div>
+      <div>
+        <label class="block text-sm font-medium">Mensaje</label>
+        <textarea name="mensaje" rows="4" required class="w-full mt-1 px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-[#66a6da]"></textarea>
+      </div>
+      <button type="submit" class="bg-[#627eff] hover:bg-[#53c6e4] text-white px-6 py-2 rounded-lg transition w-full">
+        Enviar mensaje
+      </button>
+    </form>
+  </div>
+  
+  <!-- Script para manejar el envío sin recargar -->
+  <script>
+    const form = document.getElementById("contactForm");
+    const successMessage = document.getElementById("successMessage");
+  
+    form.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const data = new FormData(form);
+      const action = form.getAttribute("action");
+  
+      const response = await fetch(action, {
+        method: "POST",
+        body: data,
+        headers: {
+          Accept: "application/json",
+        },
+      });
+  
+      if (response.ok) {
+        form.reset();
+        successMessage.classList.remove("hidden");
+        setTimeout(() => {
+          successMessage.classList.add("hidden");
+        }, 5000);
+      }
+    });
+  </script>
 
     <!-- FOOTER -->
     <footer class="bg-[#66a6da] text-white text-center py-6 mt-12">
