--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Psicología y Bienestar</title>
+    <title>Psicología & Bienestar</title>
     <!-- ICON -->
     <link rel="icon" type="image/png" href="assets/logo-ico.png">
 
@@ -36,8 +36,17 @@
             display: none;
             /* oculta scroll en caso de desborde */
         }
-    </style>
 
+        @font-face {
+            font-family: "Sego Serif";
+            src: url("fonts/sego-serif.ttf") format("truetype");
+            font-weight: normal;
+            font-style: normal;
+        }
+
+        .font-sego {
+            font-family: "Sego Serif", serif;
+        }
     </style>
     <!-- Swiper CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -53,7 +62,7 @@
         <div class="container mx-auto flex justify-between items-center p-4">
             <div class="flex items-center space-x-2">
                 <img src="assets/logo.png" alt="Logo Empresa" class="h-10 w-10" />
-                <span class="text-xl font-bold">Psicología & Bienestar</span>
+                <span class="text-xl font-bold font-sego">Psicología & Bienestar</span>
             </div>
             <nav class="space-x-4 text-sm font-semibold">
                 <a href="#inicio" class="hover:underline">Inicio</a>
@@ -74,7 +83,7 @@
         <!-- Contenido centrado -->
         <div class="relative z-10 flex items-center justify-center h-full px-6 text-center">
             <div>
-                <h1 class="text-4xl md:text-6xl font-bold mb-6">Psicología & Bienestar</h1>
+                <h1 class="text-4xl md:text-6xl font-bold mb-6 font-sego">Psicología & Bienestar</h1>
                 <p class="text-lg md:text-xl mb-8 max-w-2xl mx-auto">
                     Un espacio para el equilibrio emocional, el crecimiento personal y el cuidado de tu salud mental.
                 </p>
@@ -238,65 +247,71 @@
         </div>
     </section>
 
- <!-- FORMULARIO DE CONTACTO -->
-<div class="mt-20 max-w-2xl mx-auto bg-white shadow-lg rounded-xl p-6">
-    <h2 class="text-2xl font-semibold text-[#627eff] mb-4 text-center">Contáctanos</h2>
-  
-    <!-- Mensaje de éxito -->
-    <div id="successMessage" class="hidden text-green-700 bg-green-100 border border-green-300 rounded-lg px-4 py-3 mb-4 text-center">
-      ¡Gracias por contactarnos! Tu mensaje fue enviado exitosamente.
+    <!-- FORMULARIO DE CONTACTO -->
+    <div class="mt-20 max-w-2xl mx-auto bg-white shadow-lg rounded-xl p-6">
+        <h2 class="text-2xl font-semibold text-[#627eff] mb-4 text-center">Contáctanos</h2>
+
+        <!-- Mensaje de éxito -->
+        <div id="successMessage"
+            class="hidden text-green-700 bg-green-100 border border-green-300 rounded-lg px-4 py-3 mb-4 text-center">
+            ¡Gracias por contactarnos! Tu mensaje fue enviado exitosamente.
+        </div>
+
+        <form id="contactForm" action="https://formspree.io/f/mblgpnvb" method="POST" class="space-y-4">
+            <div>
+                <label class="block text-sm font-medium">Nombre</label>
+                <input type="text" name="nombre" required
+                    class="w-full mt-1 px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-[#66a6da]" />
+            </div>
+            <div>
+                <label class="block text-sm font-medium">Correo electrónico</label>
+                <input type="email" name="email" required
+                    class="w-full mt-1 px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-[#66a6da]" />
+            </div>
+            <div>
+                <label class="block text-sm font-medium">Teléfono</label>
+                <input type="tel" name="telefono" pattern="[0-9+ ]+" placeholder="+57 300 123 4567" required
+                    class="w-full mt-1 px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-[#66a6da]" />
+            </div>
+            <div>
+                <label class="block text-sm font-medium">Mensaje</label>
+                <textarea name="mensaje" rows="4" required
+                    class="w-full mt-1 px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-[#66a6da]"></textarea>
+            </div>
+            <button type="submit"
+                class="bg-[#627eff] hover:bg-[#53c6e4] text-white px-6 py-2 rounded-lg transition w-full">
+                Enviar mensaje
+            </button>
+        </form>
     </div>
-  
-    <form id="contactForm" action="https://formspree.io/f/mblgpnvb" method="POST" class="space-y-4">
-      <div>
-        <label class="block text-sm font-medium">Nombre</label>
-        <input type="text" name="nombre" required class="w-full mt-1 px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-[#66a6da]" />
-      </div>
-      <div>
-        <label class="block text-sm font-medium">Correo electrónico</label>
-        <input type="email" name="email" required class="w-full mt-1 px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-[#66a6da]" />
-      </div>
-      <div>
-        <label class="block text-sm font-medium">Teléfono</label>
-        <input type="tel" name="telefono" pattern="[0-9+ ]+" placeholder="+57 300 123 4567" required class="w-full mt-1 px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-[#66a6da]" />
-      </div>
-      <div>
-        <label class="block text-sm font-medium">Mensaje</label>
-        <textarea name="mensaje" rows="4" required class="w-full mt-1 px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-[#66a6da]"></textarea>
-      </div>
-      <button type="submit" class="bg-[#627eff] hover:bg-[#53c6e4] text-white px-6 py-2 rounded-lg transition w-full">
-        Enviar mensaje
-      </button>
-    </form>
-  </div>
-  
-  <!-- Script para manejar el envío sin recargar -->
-  <script>
-    const form = document.getElementById("contactForm");
-    const successMessage = document.getElementById("successMessage");
-  
-    form.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const data = new FormData(form);
-      const action = form.getAttribute("action");
-  
-      const response = await fetch(action, {
-        method: "POST",
-        body: data,
-        headers: {
-          Accept: "application/json",
-        },
-      });
-  
-      if (response.ok) {
-        form.reset();
-        successMessage.classList.remove("hidden");
-        setTimeout(() => {
-          successMessage.classList.add("hidden");
-        }, 5000);
-      }
-    });
-  </script>
+
+    <!-- Script para manejar el envío sin recargar -->
+    <script>
+        const form = document.getElementById("contactForm");
+        const successMessage = document.getElementById("successMessage");
+
+        form.addEventListener("submit", async (e) => {
+            e.preventDefault();
+            const data = new FormData(form);
+            const action = form.getAttribute("action");
+
+            const response = await fetch(action, {
+                method: "POST",
+                body: data,
+                headers: {
+                    Accept: "application/json",
+                },
+            });
+
+            if (response.ok) {
+                form.reset();
+                successMessage.classList.remove("hidden");
+                setTimeout(() => {
+                    successMessage.classList.add("hidden");
+                }, 5000);
+            }
+        });
+    </script>
 
     <!-- FOOTER -->
     <footer class="bg-[#66a6da] text-white text-center py-6 mt-12">
